# PingPongSFML

./: CMakeLists.txt  Makefile  README.md  bat.cpp  bat.h  main.cpp
src/: RandomGenerator.cpp  RandomGenerator.h  ball.cpp  ball.h  bat.cpp  bat.h  line.cpp  line.h  main.cpp
